codegen/tests/compiler_output/missing-main-macro.stderr
error: cannot find attribute `shuttle_infra` in this scope
 --> tests/compiler_output/missing-main-macro.rs:1:3
  |
1 | #[shuttle_infra()]
  |   ^^^^^^^^^^^^^
