codegen/tests/compiler_output/missing-main-macro.rs
#[shuttle_infra()]
fn main() {}
